<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.joeyb.remotecontrol.LED_Project"
    tools:showIn="@layout/activity_led__project">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/large_text" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ToggleButton
                android:id="@+id/tbE1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="E1 OFF"
                android:textOff="E1 ON"/>
            <ToggleButton
                android:id="@+id/tbE2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="E2 OFF"
                android:textOff="E2 ON"/>
            <ToggleButton
                android:id="@+id/tbE3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="E3 OFF"
                android:textOff="E3 ON"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LetterJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_j"
            android:textColor="@color/Header"
            android:textSize="32sp"
            android:layout_marginBottom="16dp"/>
            <TextView
                android:id="@+id/JColor"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:background="#000000"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Off"
                android:layout_marginLeft="16dp"
                android:onClick="btnOffJ"
                android:textColor="#0000FF"
                android:background="@drawable/button_gradient"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/R1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/r"
            android:textColor="#FF0000" />

            <SeekBar
                android:id="@+id/R1sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/G1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/g"
                android:textColor="#00FF00"/>

            <SeekBar
                android:id="@+id/G1sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/B1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/b"
                android:textColor="#0000FF"
                />

            <SeekBar
                android:id="@+id/B1sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LetterO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_o"
            android:textColor="@color/Header"
            android:textSize="32sp"
            android:layout_marginBottom="16dp"/>
            <TextView
                android:id="@+id/OColor"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:background="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:layout_marginLeft="16dp"
            android:onClick="btnOffO"
            android:textColor="#0000FF"
            android:background="@drawable/button_gradient"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/R2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/r"
                android:textColor="#FF0000"
                />

            <SeekBar
                android:id="@+id/R2sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/G2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/g"
                android:textColor="#00FF00"
                />

            <SeekBar
                android:id="@+id/G2sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/b"
                android:textColor="#0000FF"
                />

            <SeekBar
                android:id="@+id/B2sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LetterE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_e"
            android:textColor="@color/Header"
            android:textSize="32sp"
            android:layout_marginBottom="16dp"
            />
            <TextView
                android:id="@+id/EColor"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:background="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:layout_marginLeft="16dp"
            android:onClick="btnOffE"
            android:textColor="#0000FF"
            android:background="@drawable/button_gradient"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/R3"
                android:layout_width="wrap_content"
                android:textColor="#FF0000"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/r"
                />

            <SeekBar
                android:id="@+id/R3sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/G3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/g"
                android:textColor="#00FF00"
                />

            <SeekBar
                android:id="@+id/G3sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/B3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/b"
                android:textColor="#0000FF"
                />

            <SeekBar
                android:id="@+id/B3sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/LetterY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter_y"
            android:textColor="@color/Header"
            android:textSize="32sp"
            android:layout_marginBottom="16dp"/>
            <TextView
                android:id="@+id/YColor"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:background="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:layout_marginLeft="16dp"
            android:onClick="btnOffY"
            android:textColor="#0000FF"
            android:background="@drawable/button_gradient"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/R4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/r"
                android:textColor="#FF0000"
                />

            <SeekBar
                android:id="@+id/R4sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/G4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/g"
                android:textColor="#00FF00"
                />

            <SeekBar
                android:id="@+id/G4sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/B4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/b"
                android:textColor="#0000FF"
                />

            <SeekBar
                android:id="@+id/B4sb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_gravity="center"/>
        </LinearLayout>
</LinearLayout>



</android.support.v4.widget.NestedScrollView>
